blog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
