blog/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
spec:
  tls:
    - secretName: blog-certs
      hosts:
        - blog.example.com
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: blog
              servicePort: http
